# corp-openweb-ui

./: .dockerignore  .env.example  .gitignore  README.md
compose/: openwebui.compose.yml  searxng.debug.compose.yml  searxng.private.compose.yml
deploy/hermes-corporate-v1/: README.md  compose.node.yml.placeholder
deploy/openwebui-broker-reports-intake/: broker_reports_intake.py  (+2 more)
reports/: REPO_PREFLIGHT.report.md
runbooks/: BACKUP_RESTORE_PLACEHOLDER.md  DEPLOYMENT_PLACEHOLDER.md  README.md  REMOVE_NODE_PLACEHOLDER.md  ROLLBACK_PLACEHOLDER.md  UPDATE_PLACEHOLDER.md
scripts/: backup.sh  export-env-file.py  fetch-ffmpeg-wasm-assets.sh  network-hardening-check.sh  preflight.sh  render-stage2-stt-browser-config.sh  restore.md  smoke-test.sh
services/stage2-stt/: Dockerfile  pyproject.toml
services/stage2-stt/openwebui_actions/: __init__.py  stage2_media_transcription_action.py
services/stage2-stt/stage2_stt/: __init__.py  app.py  artifact_store.py  browser_config.py  config.py  contracts.py  job_store.py  jobs.py  lemonfox.py  message_docx.py  output_profiles.py  post_processing.py  prompt_catalog.py  provider.py  runtime.py  storage.py  transcript_store.py  validation.py
services/stage2-stt/tests/: loader_gate2_chat_binding.test.js  test_browser_config.py  test_capabilities_endpoint.py  test_config.py  test_job_routes.py  test_lemonfox_adapter.py  test_loader_static.py  test_message_docx.py  test_openwebui_action.py  test_post_processing.py  test_post_processing_routes.py  test_prompt_catalog.py  test_stt_v2_artifact_store.py  test_validation_storage_jobs.py
(+1128 files in other folders)
